--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
+    "firebase": "^11.0.2",
     "framer-motion": "^11.11.17",
     "postcss": "^8.4.49",
     "react": "^18.2.0",
